# django-rest-framework

./: README.md
.github/workflows/: build.yml  github-actions-demo.yml
bookstore/: .env  .env.example  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  env.example  manage.py  pyproject.toml  requirements.txt  start.sh
bookstore/api/: views.py
bookstore/bookstore/: asgi.py  settings.py  urls.py  wsgi.py
bookstore/order/: factories.py  tests.py
bookstore/order/migrations/: 0001_initial.py
bookstore/order/models/: order.py
bookstore/order/serializers/: order_serializer.py
bookstore/order/tests/test_viewsets/: test_order_viewset.py
bookstore/order/viewsets/: order_viewset.py
bookstore/product/: apps.py  factories.py
bookstore/product/migrations/: 0001_initial.py
bookstore/product/models/: category.py  product.py
bookstore/product/serializers/: category_serializer.py  product_serializer.py
bookstore/product/tests/: test_prdouct_serializer.py  test_product.py  test_user.py
bookstore/product/tests/test_model/: test_product_category_model.py
bookstore/product/tests/test_viewsets/: __init__.py  test_product_viewset.py
bookstore/product/viewsets/: product_viewset.py
