[project]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = [
    {name = "Rafael do Amaral Costa", email = "rafaelcostatricolor@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.16.0",
    "psycopg2-binary>=2.9.11",
    "gunicorn>=25.3.0",
    "whitenoise>=6.12.0",
    "dj-database-url>=3.1.2",
    "python-dotenv>=1.2.0",
    "django-extensions>=4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "factory-boy>=3.3.3",
    "django-debug-toolbar>=6.2.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
